# cookiecutter-robust-python

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .ruff.toml  README.md  cookiecutter.json  noxfile.py  pyproject.toml
docs/: conf.py  criteria.md  getting-started-template-contributing.md  glossary.md  index.md  maintenance.md  our-chosen-toolchain.md  philosophy.md  quickstart.md  requirements.txt  usage.md
docs/topics/: 01_project-structure.md  02_dependency-management.md  02_dependency_management.md  03_code-formatting.md  03_code_formatting.md  04_code-linting.md  05_type-checking.md  06_testing-coverage.md  07_documentation.md  08_security-checks.md  09_packaging-build.md  10_packaging-publish.md  11_container-build.md  12_task-automation.md  13_ci-orchestration.md  14_cd-orchestration.md  15_compose-local.md  16_prod-deploy-guidance.md  17_dev-containers.md  18_pre-commit-hooks.md  index.md
docs/workflow/: index.md
hooks/: post_gen_project.py
scripts/: dependencies-table.py  generate-demo-project.py  generate-demo.py  lint-from-demo.py  match-generated-precommit.py  prepare-github-release.py  publish-github-release.py  sync-uv-with-demo.py  update-demo.py  util.py
tests/: __init__.py  conftest.py  constants.py  util.py
tests/integration_tests/: __init__.py  conftest.py  test_robust_python_demo.py
tests/unit_tests/: __init__.py  test_github_workflows.py  test_post_gen_hook.py
{{cookiecutter.project_name}}/: .coveragerc  .cz.toml  .editorconfig  .env  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  bitbucket-pipelines.yml  noxfile.py  pyproject.toml  pyrightconfig.json  {% if cookiecutter.repository_provider == 'bitbucket' %}bitbucket-pipelines.yml{% endif %}  {% if cookiecutter.repository_provider == 'gitlab' %}.gitlab-ci.yml{% endif %}
{{cookiecutter.project_name}}/.github/workflows/: build-docs.yml  build-python.yml  build-rust.yml  bump-version.yml  docs-build-python.yml  docs-build.yml  lint-global.yml  lint-python.yml  lint-rust.yml  prepare-release.yml  release-github.yml  release-python.yml  security-python.yml  test-python.yml  test-rust.yml  typecheck-python.yml  {% if cookiecutter.add_rust_extension == 'y' %} build-rust.yml {%- endif %}  {% if cookiecutter.add_rust_extension == 'y' %} docs-build-rust.yml {%- endif %}  {% if cookiecutter.add_rust_extension == 'y' %} lint-rust.yml {%- endif %}  {% if cookiecutter.add_rust_extension == 'y' %} test-rust.yml {%- endif %}
{{cookiecutter.project_name}}/docs/: conf.py  contributing.md  usage.md
{{cookiecutter.project_name}}/rust/: Cargo.toml
{{cookiecutter.project_name}}/rust/src/: lib.rs
{{cookiecutter.project_name}}/scripts/: bump-version.py  get-release-notes.py  prepare-release.py  setup-git.py  setup-release.py  setup-venv.py  util.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/: __main__.py
{{cookiecutter.project_name}}/tests/acceptance_tests/: __init__.py
{{cookiecutter.project_name}}/tests/integration_tests/: __init__.py
{{cookiecutter.project_name}}/tests/unit_tests/: __init__.py  test_main.py
{{cookiecutter.project_name}}/{% if cookiecutter.repository_provider == 'github' %}.github{% endif %}/workflows/: lint-python.yml  prepare-release.yml  {% if cookiecutter.add_rust_extension == 'y' %} lint-rust.yml {%- endif %}  {% if cookiecutter.add_rust_extension == 'y' %} test-rust.yml {%- endif %}
