[project]
name = "{{ cookiecutter.package_name }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
authors = [
    { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" },
]
license = { text = "{{ cookiecutter.license }}" }
readme = "README.md"
requires-python = ">={{ cookiecutter.python_version }},<4.0"

keywords = [
    "{{ cookiecutter.project_slug.replace('_', '-') }}",
]

classifiers = [
    "Programming Language :: Python :: {{cookiecutter.python_version}}",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: {{ cookiecutter.license }}",
]

dependencies = [
    # Add core production dependencies here, e.g.,
    # "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "nox>=2024.3.2",
    "commitizen>=3.11.1",
    "pre-commit>=3.7.0",
]

test = [
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0",
]

typecheck = [
    "pyright>=1.1.356"
]

lint = [
    "ruff>=0.3.5",
    "pydocstyle>=6.3.0",
]

security = [
    "pip-audit>=2.8.4",
    "bandit>=1.7.7",
]

docs = [
    "sphinx>=7.3.7",
    "myst-parser>=2.0.0",
    "furo>=2024.3.4",
    "sphinx-copybutton>=0.5",
    "sphinx-autodoc-typehints>=1.24.0",
]

[project.urls]
Homepage = "https://github.com/{{ cookiecutter.github_username | lower | replace(' ', '-') }}/{{ cookiecutter.project_slug.replace('_', '-') }}"
Repository = "https://github.com/{{ cookiecutter.github_username | lower | replace(' ', '-') }}/{{ cookiecutter.project_slug.replace('_', '-') }}"

[build-system]
requires = [
    "setuptools>=61.0"
    {% if cookiecutter.add_rust_extension == 'y' -%}
    ,"maturin>=1.3.0"
    {% endif -%}
]
build-backend = {% if cookiecutter.add_rust_extension == 'y' -%} "maturin" {% else -%} "setuptools.build_meta" {% endif %}


# --- Tool-specific configurations ---
# Configuration details are often in separate files (.ruff.toml, pyrightconfig.json)
# Link to their documentation for full config options.

[tool.uv]
# See https://docs.astral.sh/uv/reference/configuration/

[tool.setuptools]
# See https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[tool.maturin]
# See https://www.maturin.rs/pyo3_builtins.html
{% if cookiecutter.add_rust_extension == 'y' -%}
rust-src = "rust"
{% endif -%}
