[project]
name = "{{cookiecutter.package_name}}"
version = "0.1.0"
description = "{{cookiecutter.package_name}}"
authors = [
    { name = "{{cookiecutter.author}}", email = "{{cookiecutter.email}}" },
]
license = { text = "{{cookiecutter.license}}" }
readme = "README.md"
requires-python = ">={{cookiecutter.min_python_version}},<4.0"

keywords = [
    "{{cookiecutter.project_name.replace('_', '-')}}",
]

classifiers = [
    "Programming Language :: Python :: {{cookiecutter.min_python_version}}",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: {{cookiecutter.license}}",
]

dependencies = [
    "loguru",
    "platformdirs>=4.3.8",
]

[dependency-groups]
dev = [
    "commitizen>=4.7.0",
    "nox>={{cookiecutter.copyright_year}}.5.1",
    "pre-commit>=4.2.0",
]
docs = [
    "furo>=2024.8.6",
    "myst-parser>=3.0.1",
    "sphinx>=7.4.7",
    "sphinx-autodoc-typehints>=2.3.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-tabs>=3.4.7",
]
lint = [
    "pydocstyle>=6.3.0",
    "ruff>=0.11.9",
]
security = [
    "bandit>=1.8.3",
    "pip-audit>=2.9.0",
]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]
typecheck = [
    "pyright>=1.1.400",
]

[project.urls]
Homepage = "https://github.com/{{ cookiecutter.github_user | lower | replace(' ', '-') }}/{{ cookiecutter.project_name.replace('_', '-') }}"
Repository = "https://github.com/{{ cookiecutter.github_user | lower | replace(' ', '-') }}/{{ cookiecutter.project_name.replace('_', '-') }}"

[build-system]
requires = [{% if cookiecutter.add_rust_extension == 'y' -%} "maturin>=1.3.0,<2.0" {% else -%} "setuptools>=61.0" {% endif -%}]
build-backend = {% if cookiecutter.add_rust_extension == 'y' -%} "maturin" {% else -%} "setuptools.build_meta" {% endif -%}


[tool.uv]
# See https://docs.astral.sh/uv/reference/configuration/

[tool.setuptools]
# See https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[tool.maturin]
# See https://www.maturin.rs/pyo3_builtins.html
{% if cookiecutter.add_rust_extension == 'y' -%}
rust-src = "rust"
{% endif -%}
