[project]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.project_name}}"
authors = [
    { name = "{{cookiecutter.author}}", email = "{{cookiecutter.email}}" },
]
license = { text = "{{cookiecutter.license}}" }
readme = "README.md"
requires-python = ">={{cookiecutter.min_python_version}},<4.0"
keywords = [
    "{{cookiecutter.project_name.replace('_', '-')}}",
]
classifiers = [
    "Programming Language :: Python :: {{cookiecutter.min_python_version}}",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: {{cookiecutter.license}}",
]
dependencies = [
    "loguru>=0.7.3",
    "platformdirs>=4.3.8",
    "typer>=0.15.4"
]

[dependency-groups]
dev = [
    "commitizen>=4.7.0",
    "nox>=2025.5.1",
    "pre-commit>=4.2.0",
    "pre-commit-hooks>=5.0.0",
    "furo>=2024.8.6",
    "myst-parser>=3.0.1",
    "sphinx>=7.4.7",
    "sphinx-autodoc-typehints>=2.3.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-tabs>=3.4.7",
    "pydocstyle>=6.3.0",
    "ruff>=0.11.9",
    "bandit>=1.8.3",
    "pip-audit>=2.9.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pyright>=1.1.400",
]

[project.urls]
Homepage = "https://github.com/{{ cookiecutter.github_user | lower | replace(' ', '-') }}/{{ cookiecutter.project_name.replace('_', '-') }}"
Repository = "https://github.com/{{ cookiecutter.github_user | lower | replace(' ', '-') }}/{{ cookiecutter.project_name.replace('_', '-') }}"

[build-system]
requires = [{% if cookiecutter.add_rust_extension == 'y' -%} "maturin>=1.3.0,<2.0" {% else -%} "setuptools>=61.0" {% endif -%}]
build-backend = {% if cookiecutter.add_rust_extension == 'y' -%} "maturin" {% else -%} "setuptools.build_meta" {% endif -%}

{% if cookiecutter.add_rust_extension == 'y' -%}
[tool.maturin]
rust-src = "rust"

{% endif -%}
